--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@types/jspdf": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "input-otp": "^1.4.2",
+    "js-file-download": "^0.4.12",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
