--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "js-file-download": "^0.4.12",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.469.0",
+    "moment": "^2.30.1",
+    "moment-hijri": "^3.0.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
