--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "input-otp": "^1.4.2",
     "js-file-download": "^0.4.12",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "moment-hijri": "^3.0.0",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/moment-hijri": "^2.1.4",
     "@types/node": "^20.17.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
