--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.10.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@mui/x-tree-view": "^7.23.6",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -56,7 +61,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/moment-hijri": "^2.1.4",
     "@types/node": "^20.17.12",
-    "@types/react": "^19",
+    "@types/react": "^19.0.5",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
