--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "input-otp": "^1.4.2",
+    "jodit": "^4.2.47",
+    "jodit-react": "^4.1.2",
     "js-file-download": "^0.4.12",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
