--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/dompurify": "^3.0.5",
     "@types/moment-hijri": "^2.1.4",
     "@types/node": "^20.17.12",
     "@types/react": "^19.0.5",
