--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "googleapis": "^144.0.0",
     "html2pdf.js": "^0.10.2",
     "input-otp": "^1.4.2",
     "jodit": "^4.2.47",
