--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
+    "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
@@ -81,6 +82,7 @@
     "@types/moment-hijri": "^2.1.4",
     "@types/node": "^20.17.12",
     "@types/react": "^19.0.5",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
