--- a/example.env
+++ b/example.env
@@ -1,5 +1,11 @@
-AUTH_SECRET="eNVtsEP2Op88SllzpukfOVRZXkiajDTF1mfHhnRDKP0=" 
+# AUTH_SECRET="eNVtsEP2Op88SllzpukfOVRZXkiajDTF1mfHhnRDKP0=" 
+
+BETTER_AUTH_SECRET=7RUIJnY1kiUjbKl0SaRgcCgo3EDqJ8SO
+BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
+
+GOOGLE_CLIENT_ID=54165071837-64pormp2095s401d3smvija8csmrm5g8.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:3000
 
 
 DATABASE_URL="postgresql://postgres:****@localhost:5432/islamicdawaproduction?schema=public" 
-
