--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -62,6 +62,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hotkeys-hook": "^4.6.1",
     "react-icons": "^5.4.0",
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^3.0.4",
