--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@react-email/components": "^0.0.32",
+    "@types/d3": "^7.4.3",
     "@types/jspdf": "^1.3.3",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -42,6 +43,7 @@
     "better-auth": "^1.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "googleapis": "^144.0.0",
@@ -67,6 +69,7 @@
     "react-icons": "^5.4.0",
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^3.0.4",
+    "react-zoom-pan-pinch": "^3.7.0",
     "recharts": "^2.15.0",
     "resend": "^4.1.1",
     "sonner": "^1.7.1",
