--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-email/components": "^0.0.32",
     "@types/d3": "^7.4.3",
     "@types/jspdf": "^1.3.3",
+    "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -61,6 +62,7 @@
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
