--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-big-calendar": "^1.17.1",
+    "react-calendar": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
