--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@react-email/components": "^0.0.32",
-    "@types/d3": "^7.4.3",
     "@types/jspdf": "^1.3.3",
     "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
@@ -86,12 +85,18 @@
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
+    "@types/cors": "^2.8.17",
+    "@types/d3": "^7.4.3",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-selection": "^3.0.11",
     "@types/dompurify": "^3.0.5",
     "@types/moment-hijri": "^2.1.4",
     "@types/node": "^20.17.12",
-    "@types/react": "^19.0.5",
+    "@types/react": "^19.1.2",
     "@types/react-big-calendar": "^1.16.1",
-    "@types/react-dom": "^19",
+    "@types/react-dom": "^19.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
