--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/x-tree-view": "^7.23.6",
     "@next/font": "^14.2.15",
     "@prisma/client": "^6.4.0",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
