--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "moment": "^2.30.1",
     "moment-hijri": "^3.0.0",
     "next": "15.1.4",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
     "react-apexcharts": "^1.7.0",
