--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/d3-scale": "^4.0.9",
     "@types/d3-selection": "^3.0.11",
     "@types/dompurify": "^3.0.5",
+    "@types/html2pdf.js": "^0.10.0",
     "@types/moment-hijri": "^2.1.4",
     "@types/node": "^20.17.12",
     "@types/react": "^19.1.2",
