--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/x-tree-view": "^7.23.6",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^14.2.15",
     "@prisma/client": "^6.4.0",
     "@radix-ui/react-accordion": "^1.2.8",
@@ -44,7 +45,6 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "better-auth": "^1.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
@@ -63,6 +63,7 @@
     "moment": "^2.30.1",
     "moment-hijri": "^3.0.0",
     "next": "15.1.4",
+    "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
