--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.5",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
