--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "recharts": "^2.15.1",
     "resend": "^4.1.1",
     "sonner": "^1.7.1",
+    "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
