--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@react-email/components": "^0.0.32",
+    "@react-pdf/renderer": "^4.3.1",
     "@types/jspdf": "^1.3.3",
     "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
